# MobileStationWebApp

./: .gitignore  LICENSE  MobileStationWebApp_Lokauswahl_UX_Konzept.md  README.md  app.py  pyproject.toml  requirements.txt  sw.js
docs/: INSTALL-openwrt.md  help-faq.md  help-install-guide.md  help-quick-start.md  index.md
packaging/openwrt/: README.md
packaging/openwrt/init.d/: mswebapp
release/: mswebapp_1.0.0-1_mipsel_24kc.ipk
src/backend_cpp/: CMakeLists.txt  main.cpp
src/backend_cpp/build-msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  mswebapp_cpp.sln  mswebapp_cpp.vcxproj  mswebapp_cpp.vcxproj.filters
src/backend_cpp/build-msvc/mswebapp_cpp.dir/Release/: mswebapp_cpp.exe.recipe
src/backend_cpp/build-msvc/mswebapp_cpp.dir/Release/mswebapp_cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  mswebapp_cpp.lastbuildstate
src/backend_cpp/build-msvc/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
src/backend_cpp/build-msvc/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/backend_cpp/build-msvc/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
src/backend_cpp/build-msvc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/backend_cpp/src/: main.cpp
src/backend_py/: __init__.py  server.py
src/frontend/: sw.js
src/frontend/static/: info.js  manifest.webmanifest  script.js  style.css
src/frontend/templates/: index.html  info.html
src/mobile_station_webapp/: __init__.py  server.py
src/mobile_station_webapp/static/: info.js  manifest.webmanifest  script.js  style.css
src/mobile_station_webapp/static/grafics/: switch_gr_active.pdn
src/mobile_station_webapp/templates/: index.html  info.html
static/: info.js  manifest.webmanifest  script.js  style.css
static/fcticons/: Thumbs.db
static/grafics/: switch_re_active.pdn
templates/: index.html  info.html
tmp/: lokomotive.cs2  magnetartikel.cs2
var/config/: lokomotive.cs2  magnetartikel.cs2  magnetartikel_ORIG.cs2
var/icons/: icondb.csv  readme
