[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile-station-webapp"
version = "0.1.0"
description = "Märklin Mobile Station WebApp (CS2/CS3 control via Flask Web UI)"
authors = [
  { name = "Ralf Mende", email = "mende.r@hotmail.de" }
]
license = { text = "Beerware" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["maerklin", "cs2", "cs3", "model-railroad", "flask", "webapp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Framework :: Flask"
]
dependencies = [
  "Flask>=3.0,<4.0"
]

[project.urls]
Homepage = "https://example.com/"
Source = "https://example.com/repo"

[project.scripts]
mswebapp = "mobile_station_webapp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

